--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = tacoclient 
+name = python-tacoclient 
 summary = TACO(SKT All Container Openstack) CLI client
 description-file = README.rst
 
