--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = python-tacoclient 
 summary = TACO(SKT All Container Openstack) CLI client
-description-file = README.rst
+description-file = README.md
 
 author = SKT Open Compute Lab
 classifier =
@@ -29,9 +29,7 @@ all_files = 1
 console_scripts =
     tacoclient = tacoclient.shell:main
 tacoclient =
-    armada = tacoclient.cli.armada:ArmadaCommand
-    kubernetes = tacoclient.cli.kubernetes:KubernetesCommand
-    kubespray = tacoclient.cli.kubespray:KubesprayCommand
+    taco = tacoclient.cli:TacoCommand
 oslo.config.opts =
     tacoclient.conf = tacoclient.conf.opts:list_opts
 
